deployment/common/keel/08_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: keel-ingress
  namespace: keel
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.passHostHeader: "false"
    traefik.frontend.priority: "1"
spec:
  rules:
    - host: keel.csgames.recursyve.dev
      http:
        paths:
          - path: /
            backend:
              serviceName: keel
              servicePort: 9300
